<resources>
    <string name="app_name">Japplication</string>
    <string name="go_to_activity_2">Go to activity 2</string>
    <string name="JLPT_5">JLPT 5</string>
    <string name="niveau_JLPT">Niveau JLPT</string>
    <string name="JLPT_4">JLPT 4</string>
    <string name="JLPT_3">JLPT 3</string>
    <string name="JLPT_2">JLPT 2</string>
    <string name="JLPT_1">JLPT 1</string>
    <string name="JLPT">JLPT</string>
    <string name="learning_method">Méthode d\'apprentissage</string>
    <string name="about">A propos</string>
    <string name="exit">Quitter</string>
    <string name="about_title">Quel est le but de Japplication ?</string>
    <string name="about_content">Je cherche de par mon expérience en japonais d\'offrir un apprentissage le plus clair et concis possible en supprimant l\'apprentissage inutile</string>
    <string name="about_who_title">Qui se cache derrière l\'application ?</string>
    <string name="about_who">A la base, juste un étudiant développeur et diplomé en japonais. Mais le code de l\'application étant totalement ouvert, toute participation est la bienvenue !</string>
    <string name="kanji_title">漢字</string>
    <string name="back">Retour</string>
    <string name="jlpt5_onyoumi">Onyoumi : %1$s</string>
    <string name="jlpt5_kunyoumi">Kunyoumi : %1$s</string>
</resources>