<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f2f7ff"
    android:padding="20dp">

    <Space
        android:layout_width="match_parent"
        android:layout_height="80dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/kanji_title"
        android:textSize="50sp"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/buttonJlpt5"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:padding="20dp"
        android:text="@string/JLPT_5"
        android:background="#a1d5f7"
        android:textSize="18sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/buttonJlpt4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:padding="20dp"
        android:text="@string/JLPT_4"
        android:background="#a1d5f7"
        android:textSize="18sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/buttonJlpt3"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:padding="20dp"
        android:text="@string/JLPT_3"
        android:background="#a1d5f7"
        android:textSize="18sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/buttonJlpt2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:padding="20dp"
        android:text="@string/JLPT_2"
        android:background="#a1d5f7"
        android:textSize="18sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/buttonJlpt1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:padding="20dp"
        android:text="@string/JLPT_1"
        android:background="#a1d5f7"
        android:textSize="18sp" />

</LinearLayout>