<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f2f7ff"
    android:padding="20dp">

    <Space
        android:layout_width="match_parent"
        android:layout_height="150dp" />

    <Button
        android:id="@+id/jlptButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:padding="20dp"
        android:text="@string/JLPT"
        android:background="#a1d5f7"
        android:textSize="18sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/aboutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:padding="20dp"
        android:text="@string/about"
        android:background="#a1d5f7"
        android:textSize="18sp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:padding="20dp"
        android:text="@string/exit"
        android:background="#a1d5f7"
        android:textSize="18sp" />

</LinearLayout>